ci: `pre-commit` cmake-format checks fixed

--- a/core-fmt/CMakeLists.txt
+++ b/core-fmt/CMakeLists.txt
@@ -25,12 +25,7 @@ cmake_minimum_required(VERSION 3.19)
 option(${projectPrefix}USE_LIBFMT "Enables usage of libfmt instead of the one from 'std'" ON)
 message(STATUS "${projectPrefix}USE_LIBFMT: ${${projectPrefix}USE_LIBFMT}")
 
-add_units_module(core-fmt
-    DEPENDENCIES
-        mp-units::core
-    HEADERS
-        include/units/format.h
-)
+add_units_module(core-fmt DEPENDENCIES mp-units::core HEADERS include/units/format.h)
 target_compile_definitions(mp-units-core-fmt INTERFACE ${projectPrefix}USE_LIBFMT=$<BOOL:${${projectPrefix}USE_LIBFMT}>)
 
 if(${projectPrefix}USE_LIBFMT)
