--- a/systems/isq-iec80000/CMakeLists.txt
+++ b/systems/isq-iec80000/CMakeLists.txt
@@ -22,14 +22,10 @@
 
 cmake_minimum_required(VERSION 3.19)
 
-add_units_module(isq-iec80000
-    DEPENDENCIES
-        mp-units::si
-    HEADERS
-        include/units/isq/iec80000/binary_prefixes.h
-        include/units/isq/iec80000/iec80000.h
-        include/units/isq/iec80000/modulation_rate.h
-        include/units/isq/iec80000/storage_capacity.h
-        include/units/isq/iec80000/traffic_intensity.h
-        include/units/isq/iec80000/transfer_rate.h
+add_units_module(
+    isq-iec80000
+    DEPENDENCIES mp-units::si
+    HEADERS include/units/isq/iec80000/binary_prefixes.h include/units/isq/iec80000/iec80000.h
+            include/units/isq/iec80000/modulation_rate.h include/units/isq/iec80000/storage_capacity.h
+            include/units/isq/iec80000/traffic_intensity.h include/units/isq/iec80000/transfer_rate.h
 )
