--- a/systems/si-hep/CMakeLists.txt
+++ b/systems/si-hep/CMakeLists.txt
@@ -22,13 +22,8 @@
 
 cmake_minimum_required(VERSION 3.19)
 
-add_units_module(si-hep
-    DEPENDENCIES
-        mp-units::si
-    HEADERS
-        include/units/isq/si/hep/area.h
-        include/units/isq/si/hep/energy.h
-        include/units/isq/si/hep/hep.h
-        include/units/isq/si/hep/mass.h
-        include/units/isq/si/hep/momentum.h
+add_units_module(
+    si-hep DEPENDENCIES mp-units::si
+    HEADERS include/units/isq/si/hep/area.h include/units/isq/si/hep/energy.h include/units/isq/si/hep/hep.h
+            include/units/isq/si/hep/mass.h include/units/isq/si/hep/momentum.h
 )
