--- a/systems/si-international/CMakeLists.txt
+++ b/systems/si-international/CMakeLists.txt
@@ -22,14 +22,10 @@
 
 cmake_minimum_required(VERSION 3.19)
 
-add_units_module(si-international
-    DEPENDENCIES
-        mp-units::si
-    HEADERS
-        include/units/isq/si/international/area.h
-        include/units/isq/si/international/international.h
-        include/units/isq/si/international/length.h
-        include/units/isq/si/international/speed.h
-        include/units/isq/si/international/volume.h
+add_units_module(
+    si-international
+    DEPENDENCIES mp-units::si
+    HEADERS include/units/isq/si/international/area.h include/units/isq/si/international/international.h
+            include/units/isq/si/international/length.h include/units/isq/si/international/speed.h
+            include/units/isq/si/international/volume.h
 )
-
