feat: `luminous_flux` support added

--- a/systems/isq/CMakeLists.txt
+++ b/systems/isq/CMakeLists.txt
@@ -49,6 +49,7 @@ add_units_module(
             include/units/isq/dimensions/inductance.h
             include/units/isq/dimensions/length.h
             include/units/isq/dimensions/luminance.h
+            include/units/isq/dimensions/luminous_flux.h
             include/units/isq/dimensions/luminous_intensity.h
             include/units/isq/dimensions/magnetic_flux.h
             include/units/isq/dimensions/magnetic_induction.h
