feat: system's definition highly simplified by removing the need for a `system_reference` for most cases

--- a/systems/si/CMakeLists.txt
+++ b/systems/si/CMakeLists.txt
@@ -23,15 +23,7 @@
 cmake_minimum_required(VERSION 3.19)
 
 add_units_module(
-    si
-    DEPENDENCIES mp-units::isq
-    HEADERS include/units/si/base_quantities.h
-            include/units/si/constants.h
-            include/units/si/mechanics.h
-            include/units/si/prefixes.h
-            include/units/si/si.h
-            include/units/si/space_and_time.h
-            include/units/si/thermodynamics.h
-            include/units/si/unit_symbols.h
-            include/units/si/units.h
+    si DEPENDENCIES mp-units::isq
+    HEADERS include/units/si/constants.h include/units/si/prefixes.h include/units/si/si.h
+            include/units/si/unit_symbols.h include/units/si/units.h
 )
