fix: `expr_divide` fixed for 1 / derived_type

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,21 +38,13 @@ if(${projectPrefix}AS_SYSTEM_HEADERS)
 endif()
 
 add_subdirectory(core)
-
-# add_subdirectory(core-fmt)
-# add_subdirectory(core-io)
+add_subdirectory(core-fmt)
+add_subdirectory(core-io)
 add_subdirectory(systems)
 
 # project-wide wrapper
 add_library(mp-units INTERFACE)
-target_link_libraries(
-    mp-units
-    INTERFACE
-        mp-units::core
-        # mp-units::core-io
-        # mp-units::core-fmt
-        mp-units::systems
-)
+target_link_libraries(mp-units INTERFACE mp-units::core mp-units::core-io mp-units::core-fmt mp-units::systems)
 add_library(mp-units::mp-units ALIAS mp-units)
 install(TARGETS mp-units EXPORT mp-unitsTargets)
 
