--- a/systems/iec80000/CMakeLists.txt
+++ b/systems/iec80000/CMakeLists.txt
@@ -23,9 +23,7 @@
 cmake_minimum_required(VERSION 3.19)
 
 add_units_module(
-    isq-iec80000
-    DEPENDENCIES mp-units::si
-    HEADERS include/units/isq/iec80000/binary_prefixes.h include/units/isq/iec80000/iec80000.h
-            include/units/isq/iec80000/modulation_rate.h include/units/isq/iec80000/storage_capacity.h
-            include/units/isq/iec80000/traffic_intensity.h include/units/isq/iec80000/transfer_rate.h
+    isq-iec80000 DEPENDENCIES mp-units::si
+    HEADERS include/units/iec80000/binary_prefixes.h include/units/iec80000/dimensions.h
+            include/units/iec80000/iec80000.h include/units/iec80000/unit_symbols.h include/units/iec80000/units.h
 )
