feat: `quantity_spec` support added

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -42,18 +42,19 @@ add_library(
     include/units/customization_points.h
     include/units/dimension.h
     # include/units/generic/angle.h
-    # include/units/generic/dimensionless.h
+    include/units/generic/dimensionless.h
     # include/units/generic/solid_angle.h
     # include/units/kind.h
     include/units/magnitude.h
-    # include/units/math.h
+    include/units/math.h
     # include/units/point_origin.h
     include/units/quantity.h
-    # include/units/quantity_cast.h
+    include/units/quantity_cast.h
     # include/units/quantity_kind.h
     # include/units/quantity_point.h
     # include/units/quantity_point_kind.h
-    # include/units/random.h
+    include/units/quantity_spec.h
+    include/units/random.h
     include/units/ratio.h
     include/units/reference.h
     include/units/symbol_text.h
