--- a/systems/isq/CMakeLists.txt
+++ b/systems/isq/CMakeLists.txt
@@ -23,6 +23,7 @@
 cmake_minimum_required(VERSION 3.19)
 
 add_units_module(
-    isq DEPENDENCIES mp-units::core HEADERS include/units/isq/base_dimensions.h include/units/isq/isq.h
-                                            include/units/isq/mechanics.h include/units/isq/space_and_time.h
+    isq DEPENDENCIES mp-units::core
+    HEADERS include/units/isq/base_quantities.h include/units/isq/isq.h include/units/isq/mechanics.h
+            include/units/isq/space_and_time.h include/units/isq/thermodynamics.h
 )
