--- a/systems/cgs/CMakeLists.txt
+++ b/systems/cgs/CMakeLists.txt
@@ -22,4 +22,4 @@
 
 cmake_minimum_required(VERSION 3.19)
 
-add_units_module(cgs DEPENDENCIES mp-units::si HEADERS include/units/cgs/cgs.h)
+add_units_module(cgs DEPENDENCIES mp-units::si HEADERS include/units/systems/cgs/cgs.h)
