--- a/systems/si-uscs/CMakeLists.txt
+++ b/systems/si-uscs/CMakeLists.txt
@@ -23,5 +23,6 @@
 cmake_minimum_required(VERSION 3.19)
 
 add_units_module(
-    si-uscs DEPENDENCIES mp-units::si HEADERS include/units/isq/si/uscs/length.h include/units/isq/si/uscs/uscs.h
+    si-uscs DEPENDENCIES mp-units::si HEADERS include/units/isq/si/uscs/length.h include/units/isq/si/uscs/pressure.h
+                                              include/units/isq/si/uscs/uscs.h
 )
